@@ -42,6 +42,10 @@
 #include <map>
 
 namespace ns3 {
+
+class WifiMacQueueItem;
+enum WifiMacDropReason : uint8_t;  // opaque enum declaration
+
 namespace aodv {
 /**
  * \ingroup aodv
@@ -180,6 +184,14 @@ public:
 protected:
   virtual void DoInitialize (void);
 private:
+  /**
+   * Notify that an MPDU was dropped.
+   *
+   * \param reason the reason why the MPDU was dropped
+   * \param mpdu the dropped MPDU
+   */
+  void NotifyTxError (WifiMacDropReason reason, Ptr<const WifiMacQueueItem> mpdu);
+
   // Protocol parameters.
   uint32_t m_rreqRetries;             ///< Maximum number of retransmissions of RREQ with TTL = NetDiameter to discover a route
   uint16_t m_ttlStart;                ///< Initial TTL value for RREQ.
