@@ -25,6 +25,8 @@
 
 namespace ns3 {
 class MeshWifiInterfaceMac;
+class WifiMacQueueItem;
+enum WifiMacDropReason : uint8_t;  // opaque enum declaration
 namespace dot11s {
 class PeerManagementProtocol;
 class IeConfiguration;
@@ -146,14 +148,15 @@ private:
   // \}
   /**
    *  Closes link when a proper number of successive transmissions have failed
-   * \param hdr the header
+   * \param reason the reason why the MPDU was dropped
+   * \param mpdu the dropped MPDU
    */
-  void TxError (WifiMacHeader const &hdr);
+  void TxError (WifiMacDropReason reason, Ptr<const WifiMacQueueItem> mpdu);
   /**
    * Transmit OK function
-   * \param hdr the header
+   * \param mpdu the MPDU
    */
-  void TxOk (WifiMacHeader const &hdr);
+  void TxOk (Ptr <const WifiMacQueueItem> mpdu);
   // BCA functionality
   /**
    * Set beacon shift function
