@@ -401,19 +401,6 @@ public:
   void AssignSequenceNumber (Ptr<WifiMacQueueItem> mpdu) const;
 
   /**
-   * The packet we sent was successfully received by the receiver.
-   *
-   * \param hdr the header of the packet that we successfully sent.
-   */
-  void BaTxOk (const WifiMacHeader &hdr);
-  /**
-   * The packet we sent was successfully received by the receiver.
-   *
-   * \param hdr the header of the packet that we failed to sent.
-   */
-  void BaTxFailed (const WifiMacHeader &hdr);
-
-  /**
    * Set the Queue Size subfield of the QoS Control field of the given QoS data frame.
    *
    * \param mpdu the given QoS data frame
